--- a/experience.html
+++ b/experience.html
@@ -35,8 +35,11 @@
 				<span class="position-title">EE 215: Fundamentals of Electrical Engineering</span>
 				<span class="location">Jan 2023 - Present</span>
 			</p>
-			<h5><span class="hover-target">Engineering Switzerland Study Abroad Program</span> EE 215</h5>
-			<img id="groupImage" src="img/group.jpg" alt="Group Image" style="display: none;">
+			<p class="position-container">
+				<span class="position-title"><span class="hover-target">Engineering Switzerland Study Abroad Program</span> (EE 215)</span>
+				<span class="location">Aug. 2023 – Sept. 2023 (Lausanne, Switzerland)</span>
+				<img id="groupImage" src="img/group.jpg" alt="Group Image" style="display: none;">
+			</p>
 			<ul>
 				<li>Prepare materials and conduct quiz sections/lab meetings.</li>
 				<li>Hold regular office hours, tutor students, and manage and respond to course-related emails.</li>
