--- a/experience.html
+++ b/experience.html
@@ -32,8 +32,8 @@
 				<span class="location">Seattle, WA</span>
 			</h3>
 			<p class="position-container">
-				<span class="position-title">EE 215: Fundamentals of Electrical Engineering</span>
-				<span class="location">Jan 2023 - Present</span>
+				<span class="course-name">EE 215: Fundamentals of Electrical Engineering</span>
+				<span class="time">Jan 2023 - Present</span>
 			</p>
 			<p class="position-container">
 				<span class="position-title"><span class="hover-target">Engineering Switzerland Study Abroad Program</span> (EE 215)</span>
@@ -41,14 +41,21 @@
 				<img id="groupImage" src="img/group.jpg" alt="Group Image" style="display: none;">
 			</p>
 			<ul>
-				<li>Prepare materials and conduct quiz sections/lab meetings.</li>
+				<li>Prepare review materials and conduct quiz sessions.</li>
 				<li>Hold regular office hours, tutor students, and manage and respond to course-related emails.</li>
 				<li>Proctor exams, grade exams and lab reports, and attend instructor/TA meetings.</li>
-			  <li>Create and re-organize the review materials and problem sets served in quiz sessions.</li>
 			  <li>Help organize lab materials, design quizzes, and lead quiz and lab sessions for <a href="https://sites.google.com/uw.edu/engineering-switzerland/home">Engineering Switzerland Study Abroad Program</a> led by Prof. Karl Böhringer.</li>
 			</ul>
 			<hr>
-			<h3>Undergraduate Teaching Assistant (OSU ENGR 1181 and 1182)</h3>
+			<h3 class="position-container">
+				<span class="position-title">Undergraduate Teaching Assistant</span>
+				<span class="institution">The Ohio State University</span>
+				<span class="location">Columbus, OH</span>
+			</h3>
+			<p class="position-container">
+				<span class="course-name">ENGR 1181/1182: Fundamentals of Engineering</span>
+				<span class="time">Aug. 2019 – May 2022</span>
+			</p>
 			<ul>
 				<li>Explored and led in-depth on various classical topics and design projects in the engineering field ranging from designing self-protection devices to safer storage system for grains with instructional team and students in the phase of the problem definition involved research plan, user needs, and value proposition, concept development, and detailed design.</li>
 			  <li>Attended assigned class and lab session to assist students in their development of basic skills in laboratories and lectures.</li>
