--- a/experience.html
+++ b/experience.html
@@ -63,7 +63,15 @@
         <li>Joined in SILT(Student Instructional Leadership Team) Mentorship Program to share experience with new teaching assistants and freshman in the College of Engineering.</li>
       </ul>
 			<hr>
-			<h3>Humanitarian Engineering Scholar Program (Faculty Leader: Rachel Tuttle)</h3>
+			<h3 class="position-container">
+				<span class="position-title">Humanitarian Engineering Scholar Program</span>
+				<span class="institution">The Ohio State University</span>
+				<span class="location">Columbus, OH</span>
+			</h3>
+			<p class="position-container">
+				<span class="course-name">Faculty Leader: Rachel Tuttle</span>
+				<span class="time">Aug. 2018 – May 2020</span>
+			</p>
 			<ul>
         <li>Contributed to the thought and dialogue needed to create change in the value system of Humanitarian Engineering by exploring an ethical framework.</li>
         <li>Engineering concepts are applied to create solutions for local community via attending various community service.</li>
