--- a/experience.html
+++ b/experience.html
@@ -36,8 +36,8 @@
 				<span class="time">Jan 2023 - Present</span>
 			</p>
 			<p class="position-container">
-				<span class="position-title"><span class="hover-target">Engineering Switzerland Study Abroad Program</span> (EE 215)</span>
-				<span class="location">Aug. 2023 – Sept. 2023 (Lausanne, Switzerland)</span>
+				<span class="position-title"><span class="hover-target">Engineering Switzerland Study Abroad Program</span> (EE 215 at EPFL in Lausanne, Switzerland)</span>
+				<span class="location">Aug. 2023 – Sept. 2023</span>
 			</p>
 			<img id="groupImage" src="img/group.jpg" alt="Group Image" style="display: none;">
 			<ul>
