--- a/project.html
+++ b/project.html
@@ -24,13 +24,20 @@
       <h1 class="h1-header">PROJECT</h1>
     </header>
 		<div class="container">
-			<div class="blurb">
-			<h3>Making Electric Vehicle Charging Fun</h3>
+			<h3 class="position-container">
+				<span class="position-title">Making Electric Vehicle Charging Fun</span>
+				<span class="institution">University of Washington</span>
+				<span class="location">Seattle, WA</span>
+			</h3>
+			<p class="position-container">
+				<span class="course-name">Team Leader (Faculty Advisor: Professor David B Laning, Sponsors: Ford & Envorso)</span>
+				<span class="time">Jan. 2023 – June. 2023</span>
+			</p>
 			<ul>
-				<li>Create a cloud server that can analyze the signals received from the vehicle’s state of charge (SoC)</li>
-			  <li>Determine the health of an electric vehicle charger using basic parameters such as charging voltage and current</li>
-        <li>Design a user-friendly interface app that will display the charger and vehicle’s state of health on a handheld computer, in this case an iOS app</li>
-			  <li>Verify and Validate the design by interviewing 3 users that will answer the same questionnaire using multiple 1-5 scale questions for design evaluation.</li>
+				<li>Created a solution that can provide a reliable and accurate assessment of whether or not chargers are working, to generate a more positive charging experience for electric vehicle (EV) owners.</li>
+			  <li>Developed a cloud computing system that can analyze the raw data received from the vehicle’s state of charge (SoC), determine the health of an EV charger and estimate charging time using machine learning models, and send statistics back to the iOS app.</li>
+        <li>Designed a user-friendly app with SwiftUI framework that can display cloud-based data about chargers’ health with live charging updates and integrate a mapping feature that provides quick routing options via Apple Maps.</li>
+			  <li>Verified and validated the design by interviewing 5 users that answered the same questionnaire using multiple 1-5 scale questions for design evaluation.</li>
 			   <img src="https://raw.githubusercontent.com/Kevinminion18/Kevinminion18.github.io/main/Picture1_CAP.png" alt="" width="150" height="300" style="padding-right: 35px; padding-top: 20px"> </img>
          <img src="https://raw.githubusercontent.com/Kevinminion18/Kevinminion18.github.io/main/Picture2_CAP.png" alt="" width="150" height="300" style="padding-right: 35px; padding-top: 20px"> </img>
 			   <img src="https://raw.githubusercontent.com/Kevinminion18/Kevinminion18.github.io/main/Picture3_CAP.png" alt="" width="150" height="300" style="padding-right: 35px; padding-top: 20px"> </img>
@@ -59,7 +66,6 @@
 				<li>Realized the visualization function based on programming and modeling</li>
 				<li>Revised with trial and error by execution result by implementing of hand method of both games</li>
 			</ul>
-		</div>
 		</div>
 		<footer>
 			<p class="centered">
