--- a/project.html
+++ b/project.html
@@ -38,11 +38,13 @@
 			  <li>Developed a cloud computing system that can analyze the raw data received from the vehicle’s state of charge (SoC), determine the health of an EV charger and estimate charging time using machine learning models, and send statistics back to the iOS app.</li>
         <li>Designed a user-friendly app with SwiftUI framework that can display cloud-based data about chargers’ health with live charging updates and integrate a mapping feature that provides quick routing options via Apple Maps.</li>
 			  <li>Verified and validated the design by interviewing 5 users that answered the same questionnaire using multiple 1-5 scale questions for design evaluation.</li>
-			   <img src="https://raw.githubusercontent.com/Kevinminion18/Kevinminion18.github.io/main/Picture1_CAP.png" alt="" width="150" height="300" style="padding-right: 35px; padding-top: 20px"> </img>
-         <img src="https://raw.githubusercontent.com/Kevinminion18/Kevinminion18.github.io/main/Picture2_CAP.png" alt="" width="150" height="300" style="padding-right: 35px; padding-top: 20px"> </img>
-			   <img src="https://raw.githubusercontent.com/Kevinminion18/Kevinminion18.github.io/main/Picture3_CAP.png" alt="" width="150" height="300" style="padding-right: 35px; padding-top: 20px"> </img>
-		     <img src="https://raw.githubusercontent.com/Kevinminion18/Kevinminion18.github.io/main/Picture4_CAP.png" alt="" width="150" height="300" style="padding-right: 35px; padding-top: 20px"> </img>
-			   <img src="https://raw.githubusercontent.com/Kevinminion18/Kevinminion18.github.io/main/Picture5_CAP.png" alt="" width="150" height="300" style="padding-right: 35px; padding-top: 20px"> </img>
+			  <div class="figma-container">
+					<img src="img/cap1.png" alt="Image 1">
+					<img src="img/cap2" alt="Image 2">
+					<img src="img/cap3" alt="Image 3">
+					<img src="img/cap4" alt="Image 4">
+					<img src="img/cap5" alt="Image 5">
+			  </div>
       </ul>
 			<hr>
 			<h3>Design Challenge</h3>
