--- a/project.html
+++ b/project.html
@@ -40,10 +40,10 @@
 			  <li>Verified and validated the design by interviewing 5 users that answered the same questionnaire using multiple 1-5 scale questions for design evaluation.</li>
 			  <div class="figma-container">
 					<img src="img/cap1.png" alt="Image 1">
-					<img src="img/cap2" alt="Image 2">
-					<img src="img/cap3" alt="Image 3">
-					<img src="img/cap4" alt="Image 4">
-					<img src="img/cap5" alt="Image 5">
+					<img src="img/cap2.png" alt="Image 2">
+					<img src="img/cap3.png" alt="Image 3">
+					<img src="img/cap4.png" alt="Image 4">
+					<img src="img/cap5.png" alt="Image 5">
 			  </div>
       </ul>
 			<hr>
