--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
       <img src="img/image.jpg" alt="Kevin Shao's profile picture" class="profile-image">
       <section>
         <p>
-          My name is Kevin Shao, a 2nd-year master student studying in Electrical and
-          Computer Engineering. I completed my bachelor degree with Magna Cum Laude
-          in Electrical and Computer Engineering at The Ohio State Univeristy. I was
-          a member of OSU Humanitarian Engineering Scholar Program. In my free time,
-          I love to travel to see unqiue culture and history from different countries.
-          Sketching and painting are also some great ways to make me relaxed. I worked
-          on a number of research projects in applications to machine learning (i.e.
-          object detection and tracking). I am very interested in interdisciplinary
+          My name is Kevin Shao, currently a 2nd-year master student in the Department
+          of Electrical and Computer Engineering at University of Washington. Prior to
+          that, I receieved my bachelor degree with Magna Cum Laude in Electrical and
+          Computer Engineering at The Ohio State Univeristy. I was a member of OSU Humanitarian
+          Engineering Scholar Program. In my free time, I love to travel to see unqiue culture
+          and history from different countries. Sketching and painting are also some great ways
+          to make me relaxed. I worked n a number of research projects in applications to machine
+          learning (i.e. object detection and tracking). I am very interested in interdisciplinary
           research to develope innovative technologies or systems, especially human-computer
           interaction in healthcare and education.
         </p>
