--- a/contact.html
+++ b/contact.html
@@ -22,14 +22,17 @@
     </section>
 
     <header>
-      <h1 class="h1-header">TRAVEL GALLARY</h1>
+      <h1 class="h1-header">CONTACT ME</h1>
     </header>
 
-		<p1>Contact Information</p1>
-			<ul>
-                           <li>Kevin Shao</li>
-                           <li>Email: kshao918@uw.edu</li>
-                        </ul>
+    <section class="container">
+      <p1>Contact Information</p1>
+      <ul>
+        <li>Kevin Shao</li>
+        <li>Email: <a href="mailto:kshao918@uw.edu">kshao918@uw.edu</a>u</li>
+      </ul>
+    </section>
+
 		<footer>
 		<p class="centered">
 			Site created by Kevin Shao. All other attributions cited in page source.
