--- a/project.html
+++ b/project.html
@@ -45,6 +45,11 @@
 					<img src="img/cap4.png" alt="Image 4">
 					<img src="img/cap5.png" alt="Image 5">
 			  </div>
+				<div id="videoContainer" style="display: none;">
+					<video width="480" height="360" controls id="videoElement">
+							<source src="voltvision.mp4" type="video/mp4">
+					</video>
+			  </div>
       </ul>
 			<hr>
 			<h3>Design Challenge</h3>
