--- a/research.html
+++ b/research.html
@@ -24,13 +24,19 @@
       <h1 class="h1-header">RESEARCH</h1>
     </header>
 		<section class="container">
-			<div class="blurb">
-			<h3>Direction of arrival estimation with nonuniform sparse arrays (Professor: Lee C Potter)</h3>
+			<h3 class="position-container">
+				<span class="position-title">Direction of Arrival Estimation with Nonuniform Sparse Arrays</span>
+				<span class="institution">The Ohio State University</span>
+				<span class="location">Columbus, OH</span>
+			</h3>
+			<p class="position-container">
+				<span class="course-name">Undergraduate Team Leader (Faculty Advisor: Professor Lee C Potter)</span>
+				<span class="time">Jul. 2021 – May 2022</span>
+			</p>
 			<ul>
-				<li>Experimentally measure the locations of microphones, sampled sound at each location, elevation angles between the signal and microphone</li>
-        <li>Implement and demonstrate sparse linear and planar arrays designed with constraints and RMSE performance</li>
-        <li>Compute noise power, CRLB theoretical bound on error variance, MLE estimator of DOA, and PRoM estimator of DOA</li>
-			  <li>Implement the optimized designs to determine the position that could generate the set of angle without aliasing and demonstrate its performance</li>
+				<li>Designed, constructed, and operated a narrowband sparse sensor array to estimate direction of arrival (DoA).</li>
+        <li>Utilized MATLAB programs and MLE estimator to determine DoAs from relative phases of each sensor in the linear and planar sparse array geometries.</li>
+        <li>Demonstrated the array placement strategy and DoA estimation techniques presented in Ohio State University (OSU) invention disclosure T2022-060.</li>
 			</ul>
 			<hr>
 			<h3>Control and Intelligent Transportations Research Lab (Research scientist: Ekim Yurtsever)</h3>
@@ -50,7 +56,6 @@
         <li>Presented a multi-level optimization framework to formulate LBT which involves three learning stages: teacher learns; teacher teaches student; teacher and student validate themselves.</li>
         <li>An efficient algorithm to solve the LBT problem has been developed and applied the approach to neural architecture search on CIFAR-100, CIFAR-10, and ImageNet, where the results demonstrate the effectiveness of our method</li>
 			</ul>
-		</div>
 	</section>
 	<footer>
 		<p class="centered">
