--- a/project.html
+++ b/project.html
@@ -46,6 +46,7 @@
 					<img src="img/cap4.png" alt="Image 4">
 					<img src="img/cap5.png" alt="Image 5">
 			  </div>
+				<button id="learnMoreBtn">Click to learn more</button>
 				<div id="videoContainer" style="display: none;">
 					<video width="480" height="360" controls id="videoElement">
 							<source src="voltvision.mp4" type="video/mp4">
