--- a/research.html
+++ b/research.html
@@ -39,12 +39,19 @@
         <li>Demonstrated the array placement strategy and DoA estimation techniques presented in Ohio State University (OSU) invention disclosure T2022-060.</li>
 			</ul>
 			<hr>
-			<h3>Control and Intelligent Transportations Research Lab (Research scientist: Ekim Yurtsever)</h3>
+			<h3 class="position-container">
+				<span class="position-title">Control and Intelligent Transportations Research</span>
+				<span class="institution">The Ohio State University</span>
+				<span class="location">Columbus, OH</span>
+			</h3>
+			<p class="position-container">
+				<span class="course-name">Research scientist: Ekim Yurtsever</span>
+				<span class="time">Apr. 2021 – Apr. 2022</span>
+			</p>
 			<ul>
-				<li>Proposed and developed a small-scale research platform for intelligent transportation systems</li>
-			  <li>Solved various dependencies issues and used OpenPCDet to train the Kitti Datasets</li>
-			  <li>Propose a more sensitive and accurate approach to count the vehicles with ROSBAG extraction simultaneously, instead of using the existed video files processing method</li>
-			  <li>The designed vehicle counting program with yolo algorithm allows to extract bidirectional vehicle counts from a moving observation platform, define the counting area with georeferencing, extract Bird's Eye View (BEV) trajectories of observed vehicles</li>
+				<li>Proposed and developed a small-scale research platform for intelligent transportation systems.</li>
+			  <li>Solved various dependencies issues and used OpenPCDet to train the Kitti Datasets.</li>
+			  <li>Used the YOLO algorithm and proposed an approach to extract bidirectional vehicle counts from a moving observation platform with ROSBAG extraction simultaneously and trajectories of observed vehicles.</li>
 			  <video width="480" height="360" controls>
 					 <source src="out_camera_3-processed.mp4" type="video/mp4">
         </video>
