--- a/research.html
+++ b/research.html
@@ -57,11 +57,18 @@
         </video>
 			</ul>
 			<hr>
-			<h3>Machine Learning Application Research (Assistant Professor: Pengtao Xie)</h3>
+			<h3 class="position-container">
+				<span class="position-title">COVID-19 Analysis with Machine Learning</span>
+				<span class="institution">University of California, San Diego</span>
+				<span class="location">Remote</span>
+			</h3>
+			<p class="position-container">
+				<span class="course-name">Assistant Professor: Pengtao Xie</span>
+				<span class="time">May 2021 – Aug. 2021</span>
+			</p>
 			<ul>
-				<li>A DARTS structure-based machine learning method is proposed, which can learn Spatio-temporal data end-to-end using a spatial model, and thus apply it in the simulation of the model of COVID-Net.</li>
-        <li>Presented a multi-level optimization framework to formulate LBT which involves three learning stages: teacher learns; teacher teaches student; teacher and student validate themselves.</li>
-        <li>An efficient algorithm to solve the LBT problem has been developed and applied the approach to neural architecture search on CIFAR-100, CIFAR-10, and ImageNet, where the results demonstrate the effectiveness of our method</li>
+				<li>Utilized a DARTS structure-based machine learning method, which can apply to neural architecture search on CIFAR-100, CIFAR-10, and ImageNet, to develop the Learning by teaching (LBT) algorithm in a team setting.</li>
+        <li>Applied the provided LBT algorithm to the COVIDx dataset and compared our training results with the model COVID-net to identify the effectiveness.</li>
 			</ul>
 	</section>
 	<footer>
