--- a/project.html
+++ b/project.html
@@ -5,7 +5,7 @@
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" href="/css/common.css">
 		<link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@900&family=Oswald:wght@500&display=swap" rel="stylesheet">
-		<script src="index.js"></script>
+		<script src="project.js"></script>
 	</head>
 	<body>
 		<section id="nav-bar">
