--- a/index.html
+++ b/index.html
@@ -30,17 +30,21 @@
       <section>
         <p>
           My name is Kevin Shao, currently a 2nd-year master student in the Department
-          of Electrical and Computer Engineering at University of Washington. Prior to
-          that, I receieved my bachelor degree with Magna Cum Laude in Electrical and
+          of Electrical and Computer Engineering at University of Washington. <br> <br>
+          Prior to that, I receieved my bachelor degree with Magna Cum Laude in Electrical and
           Computer Engineering at The Ohio State Univeristy. I was a member of OSU Humanitarian
-          Engineering Scholar Program. In my free time, I love to travel to see unqiue culture
-          and history from different countries. Sketching and painting are also some great ways
-          to make me relaxed. I worked n a number of research projects in applications to machine
-          learning (i.e. object detection and tracking). I am very interested in interdisciplinary
-          research to develope innovative technologies or systems, especially human-computer
-          interaction in healthcare and education.
+          Engineering Scholar Program. <br><br>
+          Outside of study, I love to travel to see unqiue culture and history from different
+          countries. Sketching and painting are also some great ways to make me relaxed.
         </p>
         <hr>
+        <h3>Interests</h3>
+        <ul>
+          <li>Human-Computer Interaction</li>
+          <li>Educational Technology</li>
+          <li>Healthcare</li>
+          <li>Accessibility</li>
+        </ul>
         <h3>Education</h3>
         <ul>
           <li>
