--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           countries. Sketching and painting are also some great ways to make me relaxed.
         </p>
         <hr>
-        <h3>Interests</h3>
+        <h3>Interests:</h3> Human-Computer Interaction, Educational Technology, Healthcare, and Accessibility
         <ul>
           <li>Human-Computer Interaction</li>
           <li>Educational Technology</li>
