--- a/index.html
+++ b/index.html
@@ -38,13 +38,7 @@
           countries. Sketching and painting are also some great ways to make me relaxed.
         </p>
         <hr>
-        <h3>Interests:</h3> Human-Computer Interaction, Educational Technology, Healthcare, and Accessibility
-        <ul>
-          <li>Human-Computer Interaction</li>
-          <li>Educational Technology</li>
-          <li>Healthcare</li>
-          <li>Accessibility</li>
-        </ul>
+        <h3 style="display: inline-block">Interests </h3> <span>Human-Computer Interaction, Educational Technology, Healthcare, and Accessibility</span>
         <h3>Education</h3>
         <ul>
           <li>
