--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
       <p1>Contact Information</p1>
       <ul>
         <li>Kevin Shao</li>
-        <li>Email: <a href="mailto:kshao918@uw.edu">kshao918@uw.edu</a>u</li>
+        <li>Email: <a href="mailto:kshao918@uw.edu">kshao918@uw.edu</a></li>
       </ul>
     </section>
 
