--- a/gallary.html
+++ b/gallary.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="/css/gallary.css">
     <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@900&family=Oswald:wght@500&display=swap" rel="stylesheet">
-    <title>CP1</title>
   </head>
   <body>
     <section id="nav-bar">
@@ -45,7 +44,7 @@
         <h2>Alaska, AK (2023.9)</h2>
         <p class="justified">
           Right before the fall quarter, my friends and I had a vacation trip to Alaska.
-          We watched the aurora in Fairbanks and visted XXX. We also went to one of Alaska's
+          We watched the aurora in Fairbanks and visted Matanuska Glacier. We also went to one of Alaska's
           most accessible glacier, Matanuska Glacier, two hours away from Anchorage, AK.
           Last but not least, we took the cruise to visit Kenai Fjords National Park near
           Sewards, AK.
