--- a/index.html
+++ b/index.html
@@ -34,11 +34,12 @@
           Prior to that, I receieved my bachelor degree with Magna Cum Laude in Electrical and
           Computer Engineering at The Ohio State Univeristy. I was a member of OSU Humanitarian
           Engineering Scholar Program. <br><br>
-          Outside of study, I love to travel to see unqiue culture and history from different
+          Outside of study, I love to <a href="/gallary">travel</a> to see unqiue culture and history from different
           countries. Sketching and painting are also some great ways to make me relaxed.
         </p>
         <hr>
         <h3 style="display: inline-block">Interests </h3> <span>Human-Computer Interaction, Educational Technology, Healthcare, and Accessibility</span>
+        <hr>
         <h3>Education</h3>
         <ul>
           <li>
