--- a/project.html
+++ b/project.html
@@ -47,7 +47,7 @@
 					<img src="img/cap5.png" alt="Image 5">
 			  </div>
       </ul>
-			<button id="learnMoreBtn">Click to learn more</button>
+			<button id="learnMoreBtn">Click to watch the APP demo</button>
 			<div id="videoContainer" style="display: none;">
 				<video width="480" height="360" controls id="videoElement">
 					<source src="voltvision.mp4" type="video/mp4">
