--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
             <span class="fas fa-graduation-cap"></span>
             <section class="details-container">
               <p class="course">MS in Electrical and Computer Engineering (Expected: 2024/06)</p>
-              <p class="institution">University of Washington Seattle</p>
+              <p class="institution">University of Washington, Seattle</p>
             </section>
           </li>
           <li>
             <span class="fas fa-graduation-cap"></span>
             <section class="details-container">
               <p class="course">BS in Electrical and Computer Engineering</p>
-              <p class="institution">The Ohio State Univeristy</p>
+              <p class="institution">The Ohio State Univeristy, Columbus</p>
             </section>
           </li>
         </ul>
