--- a/project.html
+++ b/project.html
@@ -54,6 +54,21 @@
 				</video>
 			</div>
 			<hr>
+			<h3 class="position-container">
+				<span class="position-title">Direction of Arrival Estimation with Nonuniform Sparse Arrays</span>
+				<span class="institution">The Ohio State University</span>
+				<span class="location">Columbus, OH</span>
+			</h3>
+			<p class="position-container">
+				<span class="course-name">Undergraduate Team Leader (Faculty Advisor: Professor Lee C Potter)</span>
+				<span class="time">Jul. 2021 – May 2022</span>
+			</p>
+			<ul>
+				<li>Designed, constructed, and operated a narrowband sparse sensor array to estimate direction of arrival (DoA).</li>
+        <li>Utilized MATLAB programs and MLE estimator to determine DoAs from relative phases of each sensor in the linear and planar sparse array geometries.</li>
+        <li>Demonstrated the array placement strategy and DoA estimation techniques presented in Ohio State University (OSU) invention disclosure T2022-060.</li>
+			</ul>
+			<hr>
 			<h3>Design Challenge</h3>
 			<ul>
 				<li>Instead of plasterboard, which can melt or mold when exposed to water, the design is made of EPS foam, and structural laminates are used for the walls, floors, and roof, making the Casita house stronger and more durable than ordinary buildings</li>
