--- a/research.html
+++ b/research.html
@@ -21,21 +21,34 @@
       </nav>
     </section>
     <header>
-      <h1 class="h1-header">RESEARCH</h1>
+      <h1 class="h1-header">SELECTED RESEARCH</h1>
     </header>
 		<section class="container">
 			<h3 class="position-container">
-				<span class="position-title">Direction of Arrival Estimation with Nonuniform Sparse Arrays</span>
-				<span class="institution">The Ohio State University</span>
-				<span class="location">Columbus, OH</span>
+				<span class="position-title">Elevating Black Corpus and UX in Speech & Language Systems</span>
+				<span class="institution">University of Washington</span>
+				<span class="location">Seattle, WA</span>
 			</h3>
 			<p class="position-container">
-				<span class="course-name">Undergraduate Team Leader (Faculty Advisor: Professor Lee C Potter)</span>
-				<span class="time">Jul. 2021 – May 2022</span>
+				<span class="course-name">Graduate Research Assistant</span>
+				<span class="time">Mar. 2023 – Present</span>
+			</p>
+			<p class="position-container">
+				<span class="course-name">Graduate PI: Jay Cunningham, PhD Candidate; Faculty Advisors: Professors Daniela Rosner and Julie Kientz</span>
 			</p>
 			<ul>
-				<li>Designed, constructed, and operated a narrowband sparse sensor array to estimate direction of arrival (DoA).</li>
-        <li>Utilized MATLAB programs and MLE estimator to determine DoAs from relative phases of each sensor in the linear and planar sparse array geometries.</li>
+				<li>Conducted an audit of three existing corpora that encompasses African American English.</li>
+				<ul>
+					<li>Performed a semi-systematic audit of the metadata associated with each corpus, cross-referencing the attributes with sociolinguistic indicators of linguistic variation and ethnic diversity.</li>
+			  </ul>
+        <li>Contribute to the effort “Responsibility and Representation in NLP Data Practices,” employing survey and focus group interview methodologies..</li>
+				<ul>
+					<li>Explore consensus-building strategies, success metrics, and quality assurance methods in NLP data production.</li>
+					<li>Investigate approaches to address issues of exclusion, discrimination, and bias within NLP dataset creation, emphasizing strategies to ensure fairness.</li>
+					<li>Identify methods to enhance user representation and AI accountability within NLP data practices.</li>
+					<li>Gain insights into challenges and opportunities in NLP data production, shedding light on the pivotal role of policy in algorithmic discrimination protections.</li>
+					<li>Plan to incorporate data analysis results into the development of more inclusive and equitable NLP systems.</li>
+			  </ul>
         <li>Demonstrated the array placement strategy and DoA estimation techniques presented in Ohio State University (OSU) invention disclosure T2022-060.</li>
 			</ul>
 			<hr>
