--- a/contact.html
+++ b/contact.html
@@ -33,10 +33,10 @@
       </ul>
     </section>
 
-		<footer>
+		<!--<footer>
 		<p class="centered">
 			Site created by Kevin Shao. All other attributions cited in page source.
 		</p>
-	</footer>
+	</footer>-->
 	</body>
 </html>
