--- a/research.html
+++ b/research.html
@@ -41,7 +41,7 @@
 				<ul>
 					<li>Performed a semi-systematic audit of the metadata associated with each corpus, cross-referencing the attributes with sociolinguistic indicators of linguistic variation and ethnic diversity.</li>
 			  </ul>
-        <li>Contribute to the effort “Responsibility and Representation in NLP Data Practices,” employing survey and focus group interview methodologies..</li>
+        <li>Contribute to the effort “Responsibility and Representation in NLP Data Practices,” employing survey and focus group interview methodologies.</li>
 				<ul>
 					<li>Explore consensus-building strategies, success metrics, and quality assurance methods in NLP data production.</li>
 					<li>Investigate approaches to address issues of exclusion, discrimination, and bias within NLP dataset creation, emphasizing strategies to ensure fairness.</li>
@@ -49,7 +49,6 @@
 					<li>Gain insights into challenges and opportunities in NLP data production, shedding light on the pivotal role of policy in algorithmic discrimination protections.</li>
 					<li>Plan to incorporate data analysis results into the development of more inclusive and equitable NLP systems.</li>
 			  </ul>
-        <li>Demonstrated the array placement strategy and DoA estimation techniques presented in Ohio State University (OSU) invention disclosure T2022-060.</li>
 			</ul>
 			<hr>
 			<h3 class="position-container">
