--- a/experience.html
+++ b/experience.html
@@ -15,7 +15,7 @@
         <a href="/experience">Experience</a>
         <a href="/project">Project</a>
         <a href="/research">Research</a>
-	      <a href="/cv">CV</a>
+	      <!--<a href="/cv">CV</a>-->
         <a href="/gallary">Gallary</a>
         <a href="/contact">Contact</a>
       </nav>
