--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
         <a href="/experience">Experience</a>
         <a href="/project">Project</a>
         <a href="/research">Research</a>
-        <!--<li><a href="/experience">Experience</a></li> -->
-        <a href="/cv">CV</a>
+        <!--<a href="/cv">CV</a>-->
         <a href="/gallary">Gallary</a>
         <a href="/contact">Contact</a>
       </nav>
