--- a/project.html
+++ b/project.html
@@ -16,7 +16,7 @@
         <a href="/project">Project</a>
         <a href="/research">Research</a>
         <!--<li><a href="/experience">Experience</a></li> -->
-				<a href="/cv">CV</a>
+				<!--<a href="/cv">CV</a>-->
         <a href="/gallary">Gallary</a>
         <a href="/contact">Contact</a>
       </nav>
