--- a/research.html
+++ b/research.html
@@ -41,7 +41,7 @@
 				<ul>
 					<li>Performed a semi-systematic audit of the metadata associated with each corpus, cross-referencing the attributes with sociolinguistic indicators of linguistic variation and ethnic diversity.</li>
 			  </ul>
-        <li>Contribute to the effort “Responsibility and Representation in NLP Data Practices,” employing survey and focus group interview methodologies.</li>
+        <li>Contribute to the effort “<a href="https://tinyurl.com/nlpstudyinfo">Responsibility and Representation in NLP Data Practices<a>,” employing survey and focus group interview methodologies.</li>
 				<ul>
 					<li>Explore consensus-building strategies, success metrics, and quality assurance methods in NLP data production.</li>
 					<li>Investigate approaches to address issues of exclusion, discrimination, and bias within NLP dataset creation, emphasizing strategies to ensure fairness.</li>
