--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@900&family=Oswald:wght@500&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" rel="stylesheet">
 	</head>
-	<body class="flex-container">
+	<body>
     <section id="nav-bar">
       <h1>Kevin Shao</h1>
       <nav>
@@ -58,6 +58,19 @@
         </ul>
       </section>
     </section>
+    <div id="chat-container">
+      <div id="chat-box-header">
+        <span>Chat with Us</span>
+        <button id="minimize">-</button>
+      </div>
+      <div id="chat-box-body">
+        <div id="messages"></div>
+      </div>
+      <div id="chat-box-footer">
+        <input type="text" id="chat-input" placeholder="Type your message here..." />
+        <button id="send-message">Send</button>
+      </div>
+    </div>
 		  <footer>
       <p class="centered">
         Site created by Kevin Shao. All other attributions cited in page source.
