--- a/index.html
+++ b/index.html
@@ -3,21 +3,22 @@
   <head>
 		<title>Kevin Shao</title>
 		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/public/css/styles.css">
+		<link rel="stylesheet" type="text/css" href="/css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@900&family=Oswald:wght@500&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" rel="stylesheet">
+    <script src="index.js"></script>
 	</head>
 	<body>
     <section id="nav-bar">
       <h1>Kevin Shao</h1>
       <nav>
-        <a href="/public/">Home</a>
-        <a href="/public/experience">Experience</a>
-        <a href="/public/project">Project</a>
-        <a href="/public/research">Research</a>
+        <a href="/">Home</a>
+        <a href="/experience">Experience</a>
+        <a href="/project">Project</a>
+        <a href="/research">Research</a>
         <!--<a href="/cv">CV</a>-->
-        <a href="/public/gallary">Gallary</a>
-        <a href="/public/contact">Contact</a>
+        <a href="/gallary">Gallary</a>
+        <a href="/contact">Contact</a>
       </nav>
     </section>
     <header>
@@ -25,7 +26,7 @@
     </header>
 
     <section id="profile-section">
-      <img src="/public/img/image.jpg" alt="Kevin Shao's profile picture" class="profile-image">
+      <img src="img/image.jpg" alt="Kevin Shao's profile picture" class="profile-image">
       <section>
         <p>
           My name is Kevin Shao, currently a 2nd-year master student in the Department
@@ -33,7 +34,7 @@
           Prior to that, I receieved my bachelor degree with Magna Cum Laude in Electrical and
           Computer Engineering at The Ohio State Univeristy. I was a member of OSU Humanitarian
           Engineering Scholar Program. <br><br>
-          Outside of study, I love to <a href="/public/gallary">travel</a> to see unqiue culture and history from different
+          Outside of study, I love to <a href="/gallary">travel</a> to see unqiue culture and history from different
           countries. Sketching and painting are also some great ways to make me relaxed.
         </p>
         <hr>
