--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
       <img src="img/image.jpg" alt="Kevin Shao's profile picture" class="profile-image">
       <section>
         <p>
-          My name is Kevin Shao, currently a 2nd-year master student in the Department
-          of Electrical and Computer Engineering at University of Washington. <br> <br>
+          My name is Kevin Shao, recently graduated from the Department
+          of Electrical and Computer Engineering at University of Washington for his master's degree. <br> <br>
           Prior to that, I receieved my bachelor degree with Magna Cum Laude in Electrical and
           Computer Engineering at The Ohio State Univeristy. I was a member of OSU Humanitarian
           Engineering Scholar Program. <br><br>
@@ -45,7 +45,7 @@
           <li>
             <span class="fas fa-graduation-cap"></span>
             <section class="details-container">
-              <p class="course">MS in Electrical and Computer Engineering (Expected: 2024/06)</p>
+              <p class="course">MS in Electrical and Computer Engineering</p>
               <p class="institution">University of Washington, Seattle</p>
             </section>
           </li>
