--- a/index.html
+++ b/index.html
@@ -42,6 +42,13 @@
         <hr>
         <h3>Education</h3>
         <ul>
+	  <li>
+            <span class="fas fa-graduation-cap"></span>
+            <section class="details-container">
+              <p class="course">Ph.D. in Electrical and Computer Engineering (starting in 2024/09)</p>
+              <p class="institution">University of Washington, Seattle</p>
+            </section>
+          </li>
           <li>
             <span class="fas fa-graduation-cap"></span>
             <section class="details-container">
