--- a/index.html
+++ b/index.html
@@ -29,11 +29,12 @@
       <img src="img/image.jpg" alt="Kevin Shao's profile picture" class="profile-image">
       <section>
         <p>
-          My name is Kevin Shao, recently graduated from the Department
-          of Electrical and Computer Engineering at University of Washington for his master's degree. <br> <br>
-          Prior to that, I receieved my bachelor degree with Magna Cum Laude in Electrical and
-          Computer Engineering at The Ohio State Univeristy. I was a member of OSU Humanitarian
-          Engineering Scholar Program. <br><br>
+          My name is Kevin Shao, and I am an incoming Ph.D. student in the Department of Electrical 
+	  and Computer Engineering (ECE) at the University of Washington (UW), Seattle. I recently 
+	  graduated with a master's degree from UW ECE. <br> <br>
+          Prior to that, I received my bachelor's degree with Magna Cum Laude honors in ECE from 
+	  The Ohio State University (OSU), Columbus. I was also a member of the OSU Humanitarian 
+	  Engineering Scholar Program. <br><br>
           Outside of study, I love to <a href="/gallary">travel</a> to see unqiue culture and history from different
           countries. Sketching and painting are also some great ways to make me relaxed.
         </p>
