--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
       <div id="chat-box-body">
         <div id="messages"></div>
       </div>
-      <div id="chat-box-footer">
-        <input type="text" id="chat-input" placeholder="Type your message here..." />
+      <!--- <div id="chat-box-footer"> --->
+<!--         <input type="text" id="chat-input" placeholder="Type your message here..." />
         <button id="send-message">Send</button>
-      </div>
+      </div>  -->
     </div>
 		  <footer>
       <p class="centered">
