--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </ul>
       </section>
     </section>
-    <div id="chat-container">
+    <!---<div id="chat-container">
       <div id="chat-box-header">
         <span>Chat with Us</span>
         <button id="minimize">-</button>
@@ -75,11 +75,11 @@
       <div id="chat-box-body">
         <div id="messages"></div>
       </div>
-      <!--- <div id="chat-box-footer"> --->
-<!--         <input type="text" id="chat-input" placeholder="Type your message here..." />
+       <div id="chat-box-footer">
+        <input type="text" id="chat-input" placeholder="Type your message here..." />
         <button id="send-message">Send</button>
-      </div>  -->
-    </div>
+      </div> 
+    </div>-->
 		  <footer>
       <p class="centered">
         Site created by Kevin Shao. All other attributions cited in page source.
