--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <img src="img/image.jpg" alt="Kevin Shao's profile picture" class="profile-image">
       <section>
         <p>
-          My name is Kevin Shao, and I am an incoming Ph.D. student in the Department of Electrical 
+          My name is Kevin Shao, and I am a 1st-year Ph.D. student in the Department of Electrical 
 	  and Computer Engineering (ECE) at the University of Washington (UW), Seattle. I recently 
 	  graduated with a master's degree from UW ECE. <br> <br>
           Prior to that, I received my bachelor's degree with Magna Cum Laude honors in ECE from 
