--- a/research.html
+++ b/research.html
@@ -31,7 +31,7 @@
 			</h3>
 			<p class="position-container">
 				<span class="course-name">Graduate Research Assistant</span>
-				<span class="time">Mar. 2023 – Present</span>
+				<span class="time">Mar. 2023 – Sept. 2024</span>
 			</p>
 			<p class="position-container">
 				<span class="course-name">Graduate PI: Jay Cunningham, PhD Candidate; Faculty Advisors: Professors Daniela Rosner and Julie Kientz</span>
@@ -43,6 +43,7 @@
 			  </ul>
         <li>Contribute to the effort “<a href="https://tinyurl.com/nlpstudyinfo">Responsibility and Representation in NLP Data Practices</a>,” employing survey and focus group interview methodologies.</li>
 				<ul>
+					<li>Advanced ethical NLP practices by conducting a mixed methods study that pinpointed strategies to enhance fairness and representation in NLP datasets, based on survey insights from 60 practitioners and a 90-minute focus group with 5 industry professionals.</li>
 					<li>Explore consensus-building strategies, success metrics, and quality assurance methods in NLP data production.</li>
 					<li>Investigate approaches to address issues of exclusion, discrimination, and bias within NLP dataset creation, emphasizing strategies to ensure fairness.</li>
 					<li>Identify methods to enhance user representation and AI accountability within NLP data practices.</li>
