--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 	  <li>
             <span class="fas fa-graduation-cap"></span>
             <section class="details-container">
-              <p class="course">Ph.D. in Electrical and Computer Engineering (starting in 2024/09)</p>
+              <p class="course">Ph.D. in Electrical and Computer Engineering (Expected graduation: 2028/06)</p>
               <p class="institution">University of Washington, Seattle</p>
             </section>
           </li>
