--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           countries. Sketching and painting are also some great ways to make me relaxed.
         </p>
         <hr>
-        <h3 style="display: inline-block">Interests </h3> <span>Human-Computer Interaction, Educational Technology, Healthcare, and Accessibility</span>
+        <h3 style="display: inline-block">Interests </h3> <span>Human-Computer Interaction, Equitable/Responsible/Ethical AI, Educational Technology, UX, LLMs, Diversity, Equity, and Inclusion (DEI), and Accessibility</span>
         <hr>
         <h3>Education</h3>
         <ul>
