--- a/index.html
+++ b/index.html
@@ -39,7 +39,13 @@
           countries. Sketching and painting are also some great ways to make me relaxed.
         </p>
         <hr>
-        <h3 style="display: inline">Interests </h3> <span>Human-Computer Interaction, Responsible AI, Educational Technology, UX, LLMs, Diversity, Equity, and Inclusion (DEI), and Accessibility</span>
+        <!--- <h3 style="display: inline">Interests </h3> <span>Human-Computer Interaction, Responsible AI, Educational Technology, UX, LLMs, Diversity, Equity, and Inclusion (DEI), and Accessibility</span>--->
+	<div style="white-space: nowrap;"> <!-- Container for the header to prevent wrapping -->
+        <h3 style="display: inline; margin: 0;">Interests</h3>
+	    </div>
+	    <div style="white-space: nowrap;"> <!-- Container for the list to prevent wrapping -->
+	        <span>Human-Computer Interaction, Responsible AI, Educational Technology, UX, LLMs, Diversity, Equity, and Inclusion (DEI), and Accessibility</span>
+	    </div>
         <hr>
         <h3>Education</h3>
         <ul>
