--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <a href="/project">Project</a>
         <a href="/research">Research</a>
         <!--<a href="/cv">CV</a>-->
-        <a href="/gallary">Gallary</a>
+        <!--<a href="/gallary">Gallary</a>-->
         <a href="/contact">Contact</a>
       </nav>
     </section>
