--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!--
 <!DOCTYPE html>
  <html lang="en">
   <head>
@@ -92,4 +93,122 @@
       </p>
     </footer>
 	</body>
+</html>
+-->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>About Kevin Shao</title>
+  <link rel="stylesheet" type="text/css" href="/css/styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@900&family=Oswald:wght@500&display=swap" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" rel="stylesheet">
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+    }
+    #profile-section {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 20px;
+    }
+    .profile-image {
+      width: 150px;
+      height: 150px;
+      border-radius: 50%;
+      margin-bottom: 20px;
+    }
+    h1 {
+      font-size: 2em;
+      margin: 10px 0;
+    }
+    h2 {
+      font-size: 1.5em;
+      margin: 10px 0;
+    }
+    h3 {
+      margin: 15px 0;
+    }
+    .contact {
+      color: #0073e6;
+      margin-bottom: 20px;
+    }
+    .content {
+      max-width: 800px;
+      margin: 0 auto;
+      padding: 20px;
+      text-align: center;
+    }
+    .columns {
+      display: flex;
+      justify-content: space-between;
+      margin-top: 20px;
+    }
+    .column {
+      width: 45%;
+    }
+    ul {
+      list-style: none;
+      padding: 0;
+    }
+    li {
+      margin-bottom: 10px;
+    }
+    .icon {
+      margin-right: 10px;
+    }
+  </style>
+</head>
+<body>
+  <section id="profile-section">
+    <img src="img/image.jpg" alt="Kevin Shao's profile picture" class="profile-image">
+    <h1>Kevin Shao</h1>
+    <a href="mailto:email@example.com" class="contact">email@example.com</a>
+    <h2>1st-year PhD Student at University of Washington</h2>
+    <p>Electrical and Computer Engineering Department</p>
+  </section>
+  <section class="content">
+    <h2>About Kevin</h2>
+    <p>
+      Hi, I’m Kevin Shao, a passionate researcher in Human-Computer Interaction, Educational Technology, and AI-driven accessibility solutions. I aspire to design impactful tools to promote equity in education. My academic journey spans from earning a Bachelor’s degree at The Ohio State University to a Master’s and now pursuing a PhD at the University of Washington.
+    </p>
+    <div class="columns">
+      <div class="column">
+        <h3>Research Interests</h3>
+        <ul>
+          <li><span class="icon fas fa-flask"></span>Human-Computer Interaction</li>
+          <li><span class="icon fas fa-robot"></span>Responsible AI</li>
+          <li><span class="icon fas fa-graduation-cap"></span>Educational Technology</li>
+          <li><span class="icon fas fa-brain"></span>UX Design</li>
+          <li><span class="icon fas fa-universal-access"></span>Accessibility</li>
+        </ul>
+      </div>
+      <div class="column">
+        <h3>Education</h3>
+        <ul>
+          <li>
+            <span class="icon fas fa-graduation-cap"></span>
+            PhD in Electrical and Computer Engineering (Expected 2028)<br>
+            University of Washington, Seattle
+          </li>
+          <li>
+            <span class="icon fas fa-graduation-cap"></span>
+            MS in Electrical and Computer Engineering<br>
+            University of Washington, Seattle
+          </li>
+          <li>
+            <span class="icon fas fa-graduation-cap"></span>
+            BS in Electrical and Computer Engineering<br>
+            The Ohio State University, Columbus
+          </li>
+        </ul>
+      </div>
+    </div>
+  </section>
+  <footer>
+    <p class="centered">Site created by Kevin Shao. All other attributions cited in page source.</p>
+  </footer>
+</body>
 </html>
