--- a/index.html
+++ b/index.html
@@ -107,12 +107,10 @@
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
+      text-align: center;
     }
     #profile-section {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding: 20px;
+      margin-top: 50px;
     }
     .profile-image {
       width: 150px;
@@ -122,42 +120,54 @@
     }
     h1 {
       font-size: 2em;
+      font-weight: bold;
       margin: 10px 0;
     }
     h2 {
-      font-size: 1.5em;
+      font-size: 1.2em;
+      font-weight: normal;
       margin: 10px 0;
+      color: #555;
+    }
+    a.contact {
+      color: #0073e6;
+      text-decoration: none;
+      font-size: 1em;
+      margin-bottom: 20px;
+      display: block;
     }
     h3 {
-      margin: 15px 0;
-    }
-    .contact {
-      color: #0073e6;
-      margin-bottom: 20px;
-    }
-    .content {
-      max-width: 800px;
-      margin: 0 auto;
-      padding: 20px;
-      text-align: center;
+      margin-top: 30px;
+      font-size: 1.5em;
     }
     .columns {
       display: flex;
-      justify-content: space-between;
-      margin-top: 20px;
+      justify-content: space-around;
+      margin-top: 40px;
     }
     .column {
-      width: 45%;
+      width: 40%;
+      text-align: left;
     }
     ul {
       list-style: none;
       padding: 0;
     }
     li {
-      margin-bottom: 10px;
+      margin: 10px 0;
+      font-size: 1em;
     }
     .icon {
       margin-right: 10px;
+    }
+    footer {
+      margin-top: 50px;
+      padding: 20px;
+      background-color: #f9f9f9;
+    }
+    footer p {
+      font-size: 0.9em;
+      color: #777;
     }
   </style>
 </head>
@@ -169,46 +179,47 @@
     <h2>1st-year PhD Student at University of Washington</h2>
     <p>Electrical and Computer Engineering Department</p>
   </section>
-  <section class="content">
-    <h2>About Kevin</h2>
+  <section>
+    <h3>About Kevin</h3>
     <p>
       Hi, I’m Kevin Shao, a passionate researcher in Human-Computer Interaction, Educational Technology, and AI-driven accessibility solutions. I aspire to design impactful tools to promote equity in education. My academic journey spans from earning a Bachelor’s degree at The Ohio State University to a Master’s and now pursuing a PhD at the University of Washington.
     </p>
-    <div class="columns">
-      <div class="column">
-        <h3>Research Interests</h3>
-        <ul>
-          <li><span class="icon fas fa-flask"></span>Human-Computer Interaction</li>
-          <li><span class="icon fas fa-robot"></span>Responsible AI</li>
-          <li><span class="icon fas fa-graduation-cap"></span>Educational Technology</li>
-          <li><span class="icon fas fa-brain"></span>UX Design</li>
-          <li><span class="icon fas fa-universal-access"></span>Accessibility</li>
-        </ul>
-      </div>
-      <div class="column">
-        <h3>Education</h3>
-        <ul>
-          <li>
-            <span class="icon fas fa-graduation-cap"></span>
-            PhD in Electrical and Computer Engineering (Expected 2028)<br>
-            University of Washington, Seattle
-          </li>
-          <li>
-            <span class="icon fas fa-graduation-cap"></span>
-            MS in Electrical and Computer Engineering<br>
-            University of Washington, Seattle
-          </li>
-          <li>
-            <span class="icon fas fa-graduation-cap"></span>
-            BS in Electrical and Computer Engineering<br>
-            The Ohio State University, Columbus
-          </li>
-        </ul>
-      </div>
+  </section>
+  <section class="columns">
+    <div class="column">
+      <h3>Research Interests</h3>
+      <ul>
+        <li><span class="icon fas fa-flask"></span>Human-Computer Interaction</li>
+        <li><span class="icon fas fa-robot"></span>Responsible AI</li>
+        <li><span class="icon fas fa-graduation-cap"></span>Educational Technology</li>
+        <li><span class="icon fas fa-brain"></span>UX Design</li>
+        <li><span class="icon fas fa-universal-access"></span>Accessibility</li>
+      </ul>
+    </div>
+    <div class="column">
+      <h3>Education</h3>
+      <ul>
+        <li>
+          <span class="icon fas fa-graduation-cap"></span>
+          PhD in Electrical and Computer Engineering (Expected 2028)<br>
+          University of Washington, Seattle
+        </li>
+        <li>
+          <span class="icon fas fa-graduation-cap"></span>
+          MS in Electrical and Computer Engineering<br>
+          University of Washington, Seattle
+        </li>
+        <li>
+          <span class="icon fas fa-graduation-cap"></span>
+          BS in Electrical and Computer Engineering<br>
+          The Ohio State University, Columbus
+        </li>
+      </ul>
     </div>
   </section>
   <footer>
-    <p class="centered">Site created by Kevin Shao. All other attributions cited in page source.</p>
+    <p>Site created by Kevin Shao. All other attributions cited in page source.</p>
   </footer>
 </body>
 </html>
+
